tests/ui/generic-const-items/elided-lifetimes.stderr
error[E0637]: `&` without an explicit lifetime name cannot be used here
  --> $DIR/elided-lifetimes.rs:8:5
   |
LL |     &T: Copy;
   |     ^ explicit lifetime name needed here
   |
help: consider introducing a higher-ranked lifetime here
   |
LL |     for<'a> &'a T: Copy;
   |     +++++++  ++

error[E0637]: `&` without an explicit lifetime name cannot be used here
  --> $DIR/elided-lifetimes.rs:10:18
   |
LL | const I<const S: &str>: &str = "";
   |                  ^ explicit lifetime name needed here

error[E0637]: `'_` cannot be used here
  --> $DIR/elided-lifetimes.rs:13:18
   |
LL | const B<T: Trait<'_>>: () = ();
   |                  ^^ `'_` is a reserved lifetime name

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0637`.
